@@ -4,8 +4,7 @@
 #include "lcd.h"			  /* for lcd_logical_driver */
 #include "hd44780-low.h"		  /* for HD44780_functions */
 
-// initialise this particular driver, args is probably not used but keep
-// for consistency
+// initialise this particular driver
 int hd_init_usblcd(Driver *drvthis);
 
 #endif
