@@ -50,7 +50,6 @@
 
 #include "lcd.h"
 #include "lcd_lib.h"
-#include "shared/debug.h"
 #include "report.h"
 
 /* Defines a 6x8 font based on ISO 8859-15 */
@@ -278,11 +277,11 @@ imonlcd_init(Driver *drvthis)
 	/* Allocate, initialize and store private p */
 	p = (PrivateData *) calloc(1, sizeof(PrivateData));
 	if (p == NULL) {
-		debug(RPT_ERR, "%s: failed to allocate private data", drvthis->name);
+		report(RPT_ERR, "%s: failed to allocate private data", drvthis->name);
 		return -1;
 	}
 	if (drvthis->store_private_ptr(drvthis, p)) {
-		debug(RPT_ERR, "%s: failed to store private data pointer", drvthis->name);
+		report(RPT_ERR, "%s: failed to store private data pointer", drvthis->name);
 		return -1;
 	}
 
